--- a/docker/nginx/conf/nginx.conf
+++ b/docker/nginx/conf/nginx.conf
@@ -1,33 +1,31 @@
-user  nginx;
-worker_processes  auto;
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
 
 events { worker_connections 1024; }
 
 http {
-  include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
-  access_log    /var/log/nginx/access.log;
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
+  access_log /var/log/nginx/access.log;
 
   server {
-    listen       80;
-    server_name  localhost;
-    return       301 https://\$host\$request_uri;
+    listen 80;
+    server_name test-services-web-project.cours-ethem.dns-dynamic.net;
+    return 301 https://$host$request_uri;
   }
 
   server {
-    listen       443 ssl;
-    server_name  localhost;
+    listen 443 ssl;
+    server_name test-services-web-project.cours-ethem.dns-dynamic.net;
+
     ssl_certificate      /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key  /etc/nginx/ssl/privkey.pem;
-    ssl_session_cache    shared:SSL:1m;
-    ssl_session_timeout  10m;
 
     location / {
-      proxy_pass         http://wordpress:80;
-      proxy_set_header   Host \$host;
-      proxy_set_header   X-Real-IP \$remote_addr;
+      proxy_pass http://wordpress-service:80;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
     }
   }
 }
