amelioration securite et secret + ajout pvc mariadb

--- a/k8s/mariadb-deployment.yaml
+++ b/k8s/mariadb-deployment.yaml
@@ -24,3 +24,10 @@ spec:
             secretKeyRef:
               name: db-credentials
               key: root-password
+        volumeMounts:
+        - name: mariadb-data
+          mountPath: /var/lib/mysql
+      volumes:
+      - name: mariadb-data
+        persistentVolumeClaim:
+          claimName: mariadb-pvc
