modification secrets et securité V2

--- a/docker/nginx/conf/nginx.conf
+++ b/docker/nginx/conf/nginx.conf
@@ -11,21 +11,21 @@ http {
 
   server {
     listen 80;
-    server_name test-services-web-project.cours-ethem.dns-dynamic.net;
-    return 301 https://$host$request_uri;
+    server_name localhost;
+    return 301 https://\$host\$request_uri;
   }
 
   server {
     listen 443 ssl;
-    server_name test-services-web-project.cours-ethem.dns-dynamic.net;
+    server_name localhost;
 
     ssl_certificate      /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key  /etc/nginx/ssl/privkey.pem;
 
     location / {
-      proxy_pass http://wordpress-service:80;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
+      proxy_pass         http://wordpress-service:80;
+      proxy_set_header   Host \$host;
+      proxy_set_header   X-Real-IP \$remote_addr;
     }
   }
 }
