--- a/k8s/wordpress-deployment.yaml
+++ b/k8s/wordpress-deployment.yaml
@@ -31,3 +31,45 @@ spec:
             secretKeyRef:
               name: db-credentials
               key: password
+
+        # SALT WordPress injectés depuis le Secret "wordpress-salts"
+        - name: AUTH_KEY
+          valueFrom:
+            secretKeyRef:
+              name: wordpress-salts
+              key: AUTH_KEY
+        - name: SECURE_AUTH_KEY
+          valueFrom:
+            secretKeyRef:
+              name: wordpress-salts
+              key: SECURE_AUTH_KEY
+        - name: LOGGED_IN_KEY
+          valueFrom:
+            secretKeyRef:
+              name: wordpress-salts
+              key: LOGGED_IN_KEY
+        - name: NONCE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: wordpress-salts
+              key: NONCE_KEY
+        - name: AUTH_SALT
+          valueFrom:
+            secretKeyRef:
+              name: wordpress-salts
+              key: AUTH_SALT
+        - name: SECURE_AUTH_SALT
+          valueFrom:
+            secretKeyRef:
+              name: wordpress-salts
+              key: SECURE_AUTH_SALT
+        - name: LOGGED_IN_SALT
+          valueFrom:
+            secretKeyRef:
+              name: wordpress-salts
+              key: LOGGED_IN_SALT
+        - name: NONCE_SALT
+          valueFrom:
+            secretKeyRef:
+              name: wordpress-salts
+              key: NONCE_SALT
