--- a/k8s/clusterissuer-letsencrypt-cloudns.yaml
+++ b/k8s/clusterissuer-letsencrypt-cloudns.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: jeanethem@hotmail.fr
+    email: "<VOTRE_EMAIL_ACME>"
     privateKeySecretRef:
       name: letsencrypt-cloudns-key
     solvers:
