ajout readme et modifk8s/wordpress-deployment.yaml

--- a/k8s/wordpress-deployment.yaml
+++ b/k8s/wordpress-deployment.yaml
@@ -72,3 +72,4 @@ spec:
             secretKeyRef:
               name: wordpress-salts
               key: NONCE_SALT
+        restartPolicy: Always
