--- a/webproject/templates/wordpress-deployment.yaml
+++ b/webproject/templates/wordpress-deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: wordpress
     spec:
+      serviceAccountName: {{ include "webproject.serviceAccountName" . }}
       containers:
       - name: wordpress
         image: {{ printf "%s/%s" .Values.image.registry .Values.image.wordpress }}
@@ -22,7 +23,7 @@ spec:
         - containerPort: 80
         env:
         - name: WORDPRESS_DB_HOST
-          value: mariadb-service
+          value: mariadb-service:3306
         - name: WORDPRESS_DB_USER
           valueFrom:
             secretKeyRef:
@@ -34,42 +35,38 @@ spec:
               name: {{ .Values.dbCredentials.name }}
               key: password
         - name: AUTH_KEY
-          valueFrom:
-            secretKeyRef:
-              name: wordpress-salts
-              key: AUTH_KEY
+          valueFrom: { secretKeyRef: { name: wordpress-salts, key: AUTH_KEY } }
         - name: SECURE_AUTH_KEY
-          valueFrom:
-            secretKeyRef:
-              name: wordpress-salts
-              key: SECURE_AUTH_KEY
+          valueFrom: { secretKeyRef: { name: wordpress-salts, key: SECURE_AUTH_KEY } }
         - name: LOGGED_IN_KEY
-          valueFrom:
-            secretKeyRef:
-              name: wordpress-salts
-              key: LOGGED_IN_KEY
+          valueFrom: { secretKeyRef: { name: wordpress-salts, key: LOGGED_IN_KEY } }
         - name: NONCE_KEY
-          valueFrom:
-            secretKeyRef:
-              name: wordpress-salts
-              key: NONCE_KEY
+          valueFrom: { secretKeyRef: { name: wordpress-salts, key: NONCE_KEY } }
         - name: AUTH_SALT
-          valueFrom:
-            secretKeyRef:
-              name: wordpress-salts
-              key: AUTH_SALT
+          valueFrom: { secretKeyRef: { name: wordpress-salts, key: AUTH_SALT } }
         - name: SECURE_AUTH_SALT
-          valueFrom:
-            secretKeyRef:
-              name: wordpress-salts
-              key: SECURE_AUTH_SALT
+          valueFrom: { secretKeyRef: { name: wordpress-salts, key: SECURE_AUTH_SALT } }
         - name: LOGGED_IN_SALT
-          valueFrom:
-            secretKeyRef:
-              name: wordpress-salts
-              key: LOGGED_IN_SALT
+          valueFrom: { secretKeyRef: { name: wordpress-salts, key: LOGGED_IN_SALT } }
         - name: NONCE_SALT
-          valueFrom:
-            secretKeyRef:
-              name: wordpress-salts
-              key: NONCE_SALT
+          valueFrom: { secretKeyRef: { name: wordpress-salts, key: NONCE_SALT } }
+        livenessProbe:
+          httpGet:
+            path: /wp-login.php
+            port: 80
+          initialDelaySeconds: 20
+          periodSeconds: 15
+          timeoutSeconds: 5
+          failureThreshold: 6
+        readinessProbe:
+          httpGet:
+            path: /wp-login.php
+            port: 80
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 3
+          failureThreshold: 6
+        {{- with .Values.resources.wordpress }}
+        resources:
+{{ toYaml . | indent 10 }}
+        {{- end }}
