--- a/webproject/templates/secrets-nginx-ssl.yaml
+++ b/webproject/templates/secrets-nginx-ssl.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ssl.fromFiles | default false }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,3 +8,4 @@ type: Opaque
 data:
   fullchain.pem: {{ .Files.Get "certs/fullchain.pem" | b64enc }}
   privkey.pem:   {{ .Files.Get "certs/privkey.pem"   | b64enc }}
+{{- end }}
