--- a/webproject/templates/secrets-db-credentials.yaml
+++ b/webproject/templates/secrets-db-credentials.yaml
@@ -7,3 +7,4 @@ stringData:
   username: {{ .Values.dbCredentials.username | quote }}
   password: {{ .Values.dbCredentials.password | quote }}
   root-password: {{ .Values.dbCredentials.password | quote }}
+  wp-password: {{ .Values.dbCredentials.wpPassword | quote }}
