--- a/webproject/templates/wordpress-deployment.yaml
+++ b/webproject/templates/wordpress-deployment.yaml
@@ -34,6 +34,11 @@ spec:
             secretKeyRef:
               name: {{ .Values.dbCredentials.name }}
               key: password
+        - name: WORDPRESS_DB_NAME
+          valueFrom:
+            secretKeyRef:
+              name: db-credentials
+              key: database
         - name: AUTH_KEY
           valueFrom: { secretKeyRef: { name: wordpress-salts, key: AUTH_KEY } }
         - name: SECURE_AUTH_KEY
