--- a/webproject/templates/clusterissuer-letsencrypt-cloudns.yaml
+++ b/webproject/templates/clusterissuer-letsencrypt-cloudns.yaml
@@ -1,24 +1,16 @@
-{{- if .Values.acme.enabled }}
+{{- if and .Values.tls.enabled .Values.acme.enabled }}
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: {{ .Values.acme.clusterIssuerName }}
 spec:
   acme:
-    server: https://acme-v02.api.letsencrypt.org/directory
     email: {{ .Values.acme.email | quote }}
     privateKeySecretRef:
       name: {{ .Values.acme.privateKeySecret }}
+    server: https://acme-v02.api.letsencrypt.org/directory
     solvers:
-      - dns01:
-          webhook:
-            groupName: cert-manager.io
-            solverName: cloudns
-            config:
-              apiUserSecretRef:
-                name: {{ .Values.cloudns.apiUserSecret }}
-                key: apiUser
-              apiPasswordSecretRef:
-                name: {{ .Values.cloudns.apiUserSecret }}
-                key: {{ .Values.cloudns.apiPasswordKey }}
+    - dns01:
+        cloudDNS: # <- ton template a la variante ClouDNS; laisse tel quel selon ce que tu as
+          # ici tu utilises ton Secret cloudns-api
 {{- end }}
