--- a/webproject/templates/mariadb-service.yaml
+++ b/webproject/templates/mariadb-service.yaml
@@ -2,11 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mariadb-service
+  namespace: default
+  labels:
+    app: mariadb
 spec:
+  type: ClusterIP
   selector:
     app: mariadb
   ports:
-  - name: mysql
-    protocol: TCP
-    port: 3306
-    targetPort: 3306
+    - name: mysql
+      port: 3306
+      targetPort: 3306
