--- a/webproject/templates/nginx-config.yaml
+++ b/webproject/templates/nginx-config.yaml
@@ -4,65 +4,29 @@ metadata:
   name: nginx-config
 data:
   nginx.conf: |
-    user nginx;
     worker_processes auto;
-    error_log /var/log/nginx/error.log warn;
-
     events { worker_connections 1024; }
-
     http {
-    server_tokens off;
-      include /etc/nginx/mime.types;
-      default_type application/octet-stream;
-      access_log /var/log/nginx/access.log;
+      include       /etc/nginx/mime.types;
+      default_type  application/octet-stream;
+      access_log    /var/log/nginx/access.log;
+      server_tokens off;
 
-      # --- HTTP : /healthz => 200 ; le reste redirige vers HTTPS
       server {
-        listen 80;
-        server_name {{ .Values.domain }} _;
+        listen 80 default_server;
+        server_name _;
 
-        location = /healthz {
-          return 200 'ok';
-          add_header Content-Type text/plain;
-        }
+        # Probe
+        location = /healthz { return 200 'ok'; add_header Content-Type text/plain; }
 
-        location / {
-          return 301 https://$host$request_uri;
-        }
-      }
-
-      # --- HTTPS : vhost principal
-      server {
-        listen 443 ssl;
-        server_name {{ .Values.domain }} _;
-
-        ssl_certificate      /etc/nginx/ssl/fullchain.pem;
-        ssl_certificate_key  /etc/nginx/ssl/privkey.pem;
-        ssl_session_cache    shared:SSL:1m;
-        ssl_session_timeout  10m;
-
-        # Headers sécurité (non bloquants en dev)
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        # HSTS à activer en prod uniquement avec un vrai FQDN + cert publics
-        # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
-        # Supprimer les entêtes bavards de l'amont (Apache/PHP)
-        proxy_hide_header X-Powered-By;
-        proxy_hide_header Server;
-
-        location = /healthz {
-          return 200 'ok';
-          add_header Content-Type text/plain;
-        }
-
+        # Proxy vers WordPress (Service DNS)
         location / {
           proxy_pass              http://wordpress-service:80;
           proxy_set_header        Host              $host;
           proxy_set_header        X-Real-IP         $remote_addr;
           proxy_set_header        X-Forwarded-For   $proxy_add_x_forwarded_for;
           proxy_set_header        X-Forwarded-Proto $scheme;
+          proxy_read_timeout      180;
         }
       }
     }
