--- a/webproject/templates/serviceaccount.yaml
+++ b/webproject/templates/serviceaccount.yaml
@@ -2,7 +2,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ default .Chart.Name .Values.serviceAccount.name }}
+  name: {{ include "webproject.serviceAccountName" . }}
   labels:
     {{- include "webproject.labels" . | nindent 4 }}
+automountServiceAccountToken: true
 {{- end }}
