--- a/webproject/templates/wordpress-deployment.yaml
+++ b/webproject/templates/wordpress-deployment.yaml
@@ -16,37 +16,35 @@ spec:
       - name: wordpress
         image: {{ printf "%s/%s" .Values.image.registry .Values.image.wordpress }}
         imagePullPolicy: IfNotPresent
-        ports:
-          - containerPort: 80
+        ports: [{ containerPort: 80 }]
         env:
           - name: WORDPRESS_DB_HOST
             value: "mariadb-service:3306"
           - name: WORDPRESS_DB_USER
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.dbCredentials.name }}
-                key: username
+            valueFrom: { secretKeyRef: { name: {{ .Values.dbCredentials.name | quote }}, key: username } }
           - name: WORDPRESS_DB_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.dbCredentials.name }}
-                key: password
+            valueFrom: { secretKeyRef: { name: {{ .Values.dbCredentials.name | quote }}, key: password } }
           - name: WORDPRESS_DB_NAME
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Values.dbCredentials.name }}
-                key: database
-        {{- with (index .Values "resources" "wordpress") }}
-        resources:
-{{ toYaml . | indent 10 }}
-        {{- end }}
-        readinessProbe:
-          httpGet: { path: "/", port: 80 }
-          initialDelaySeconds: 10
-          periodSeconds: 10
-          timeoutSeconds: 5
-        livenessProbe:
-          httpGet: { path: "/", port: 80 }
-          initialDelaySeconds: 20
-          periodSeconds: 15
-          timeoutSeconds: 5
+            valueFrom: { secretKeyRef: { name: {{ .Values.dbCredentials.name | quote }}, key: database } }
+
+          # --- SALTS WordPress (Secret rendu par Helm ci-dessus) ---
+          {{- $saltName := (default "wordpress-salts" .Values.wordpressSalts.name) }}
+          - name: AUTH_KEY
+            valueFrom: { secretKeyRef: { name: {{ $saltName | quote }}, key: AUTH_KEY } }
+          - name: SECURE_AUTH_KEY
+            valueFrom: { secretKeyRef: { name: {{ $saltName | quote }}, key: SECURE_AUTH_KEY } }
+          - name: LOGGED_IN_KEY
+            valueFrom: { secretKeyRef: { name: {{ $saltName | quote }}, key: LOGGED_IN_KEY } }
+          - name: NONCE_KEY
+            valueFrom: { secretKeyRef: { name: {{ $saltName | quote }}, key: NONCE_KEY } }
+          - name: AUTH_SALT
+            valueFrom: { secretKeyRef: { name: {{ $saltName | quote }}, key: AUTH_SALT } }
+          - name: SECURE_AUTH_SALT
+            valueFrom: { secretKeyRef: { name: {{ $saltName | quote }}, key: SECURE_AUTH_SALT } }
+          - name: LOGGED_IN_SALT
+            valueFrom: { secretKeyRef: { name: {{ $saltName | quote }}, key: LOGGED_IN_SALT } }
+          - name: NONCE_SALT
+            valueFrom: { secretKeyRef: { name: {{ $saltName | quote }}, key: NONCE_SALT } }
+
+        readinessProbe: { httpGet: { path: "/", port: 80 }, initialDelaySeconds: 10, periodSeconds: 10, timeoutSeconds: 5 }
+        livenessProbe:  { httpGet: { path: "/", port: 80 }, initialDelaySeconds: 20, periodSeconds: 15, timeoutSeconds: 5 }
